Izmene i prilagodjavanje kontakt formi

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,3 +2,4 @@ VITE_API_URL=/api
 VITE_FILES_BASE_URL=
 VITE_CHAT_ENABLED=true
 VITE_CHAT_AUTO_OPEN=false
+VITE_BACKEND_ORIGIN=http://localhost:8000
