--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Frontend – Build & Deploy to Cloudways
 
 on:
@@ -13,67 +14,64 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SSH_HOST: ${{ secrets.SSH_HOST }}
-      SSH_USER: ${{ secrets.SSH_USER }}
+      APP_ROOT: /home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html
       DEST: /home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html/public
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install & Build (frontend)
+      - name: Build frontend
         working-directory: frontend
         run: |
           set -euo pipefail
           npm ci
           npm run build
+          test -d dist || (echo "❌ Build nije kreirao dist/"; exit 1)
 
-      - name: Load SSH key
+      # === DEPLOY (SFTP kao APP USER) ===
+      - name: Deploy dist via SFTP
+        uses: SamKirkland/FTP-Deploy-Action@v4
+        with:
+          server: ${{ secrets.SFTP_HOST }}
+          username: ${{ secrets.SFTP_USER }}
+          password: ${{ secrets.SFTP_PASS }}
+          protocol: sftp
+          port: 22
+          local-dir: frontend/dist/
+          server-dir: /home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html/public/
+          # obriši fajlove na serveru koji više ne postoje lokalno (hashirani assets)
+          dangerous-clean-slate: true
+          # NE diraj Laravel fajlove
+          exclude: |
+            index.php
+            storage
+            .htaccess
+
+      # === ARTISAN (SSH kao MASTER USER) – opciono, ali preporučeno ===
+      - name: Load master SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
+          ssh-private-key: ${{ secrets.MASTER_SSH_KEY }}
 
-      - name: Trust Cloudways host
+      - name: Trust master host
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts
-
-      - name: Deploy frontend to Cloudways
-        run: |
-          set -euo pipefail
-
-          APP_ROOT="/home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html"
-          DEST="$APP_ROOT/public"
-
-          echo "== Ensure remote dirs exist =="
-          ssh "$SSH_USER@$SSH_HOST" "mkdir -p \"$DEST/assets\""
-
-          echo "== Clean old assets =="
-          ssh "$SSH_USER@$SSH_HOST" "rm -rf \"$DEST/assets\"/* || true"
-
-          echo "== Upload new build =="
-          if [ -d "frontend/dist/assets" ]; then
-            scp -r frontend/dist/assets/. "$SSH_USER@$SSH_HOST:$DEST/assets/"
-          else
-            echo "⚠️ No local assets found in frontend/dist/assets"
-          fi
-
-          echo "== Upload index.html =="
-          scp frontend/dist/index.html "$SSH_USER@$SSH_HOST:$DEST/index.html"
+          ssh-keyscan -H "${{ secrets.MASTER_SSH_HOST }}" >> ~/.ssh/known_hosts
 
       - name: Clear Laravel caches
         run: |
-          ssh "$SSH_USER@$SSH_HOST" \
-            'cd /home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html && php artisan optimize:clear || true'
+          ssh "${{ secrets.MASTER_SSH_USER }}"@"${{ secrets.MASTER_SSH_HOST }}" \
+            "cd '${{ env.APP_ROOT }}' && php artisan optimize:clear || true"
 
-      - name: Sanity check remote path
+      - name: Sanity check public/
         run: |
-          ssh "$SSH_USER@$SSH_HOST" \
-            'echo "== User info =="; whoami; pwd; echo "== Files =="; ls -l /home/1475017.cloudwaysapps.com/ascqrnhbfh/public_html/public'
+          ssh "${{ secrets.MASTER_SSH_USER }}"@"${{ secrets.MASTER_SSH_HOST }}" \
+            "echo '== listing $DEST =='; ls -la '${{ env.DEST }}' | head -n 100 && echo 'Deploy OK ✅'"
