--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,15 +40,13 @@ jobs:
       - name: Deploy dist via SFTP
         uses: SamKirkland/FTP-Deploy-Action@v4
         with:
-          server: ${{ secrets.SFTP_HOST }}
-          username: ${{ secrets.SFTP_USER }}
-          password: ${{ secrets.SFTP_PASS }}
+          server: ${{ secrets.SFTP_HOST }}         # 64.226.68.160
+          username: ${{ secrets.SFTP_USER }}       # expressajt
+          password: ${{ secrets.SFTP_PASS }}       # lozinka iz Application Credentials
           protocol: sftp
           port: 22
           local-dir: frontend/dist/
-          # KLJUČNO: relativno od SFTP root-a (app usera), BEZ /home/...
-          server-dir: public_html/public/
-          # obriši što lokalno više ne postoji (hashirani assets)
+          server-dir: public_html/public/          # relativno od SFTP root-a
           dangerous-clean-slate: true
           exclude: |
             index.php
@@ -56,7 +54,7 @@ jobs:
             .htaccess
           log-level: verbose
 
-      # === ARTISAN (SSH kao MASTER USER) – opciono, ali preporučeno ===
+      # === ARTISAN (SSH kao MASTER USER) – opciono ===
       - name: Load master SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
